k8s/base/tools-ruutu/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: toimi-tools-ruutu
  namespace: apps
spec:
  selector:
    app: toimi-tools-ruutu
  ports:
    - port: 80
      targetPort: 8080
